--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Helllo World!</title>
+  <title>Filebin</title>
 
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
