files list (table)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,41 @@
   </nav>
 
   <div class="container">
-
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Filename</th>
+          <th>Upload Date</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Imprimir.pdf</td>
+          <td>20/15/2021 (1 minute ago)</td>
+          <td><img src="assets/img/view.svg" height="24px">
+            <img src="assets/img/download.svg" height="20px" class="ml-2 mr-2"> |
+            <img src="assets/img/delete.svg" height="20px" class="ml-2">
+          </td>
+        </tr>
+        <tr>
+          <td>Impirmir.pdf</td>
+          <td>20/15/2021 (1 minute ago)</td>
+          <td><img src="assets/img/view.svg" height="24px">
+            <img src="assets/img/download.svg" height="20px" class="ml-2 mr-2"> |
+            <img src="assets/img/delete.svg" height="20px" class="ml-2">
+          </td>
+        </tr>
+        <tr>
+          <td>Imprimir.pdf</td>
+          <td>20/15/2021 (1 minute ago)</td>
+          <td><img src="assets/img/view.svg" height="24px">
+            <img src="assets/img/download.svg" height="20px" class="ml-2 mr-2"> |
+            <img src="assets/img/delete.svg" height="20px" class="ml-2">
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
