--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </nav>
 
   <div class="container">
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>Filename</th>
