--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="container">
     <table class="table table-hover mt-3" id="files-table">
-      <thead>
+      <thead class="thead-light">
         <tr>
           <th>Filename</th>
           <th>Upload Date</th>
