--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   </nav>
 
   <div class="container">
+    <h3>Files</h3>
     <table class="table table-hover mt-3" id="files-table">
       <thead class="thead-light">
         <tr>
