--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         </tr>
       </tbody>
     </table>
+
+    <div>
+      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"> Upload</button>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
