upload button image width

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     </table>
 
     <div>
-      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"><img src="assets/img/download.svg">
+      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"><img src="assets/img/download.svg"
+          width="20px">
         Upload</button>
     </div>
   </div>
