upload button image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     </table>
 
     <div>
-      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"> Upload</button>
+      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"><img src="assets/img/download.svg">
+        Upload</button>
     </div>
   </div>
 
