--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div>
       <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"><img src="assets/img/download.svg"
-          width="20px">
+          width="20px" class="mr-3">
         Upload</button>
     </div>
   </div>
