fix typo: upload button image

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </table>
 
     <div>
-      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5"><img src="assets/img/download.svg"
-          width="20px" class="mr-3">
+      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5 mr-3"><img
+          src="assets/img/download.svg" width="20px">
         Upload</button>
     </div>
   </div>
