--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
       </tbody>
     </table>
 
-    <div>
-      <button type="button" class="btn btn-outline-secondary btn-lg btn-block mt-5 mr-3"><img
-          src="assets/img/download.svg" width="20px">
-        Upload</button>
+    <div class="my-5">
+      <h3 class="my-3">Upload</h3>
+      <form action="https://filebin.glitch.me/api/upload" class="dropzone" id="dz-upload"></form>
     </div>
   </div>
 
