--- a/index.html
+++ b/index.html
@@ -40,27 +40,12 @@
       </thead>
       <tbody>
         <tr>
-          <td>Imprimir.pdf</td>
-          <td>20/15/2021 (1 minute ago)</td>
-          <td><img src="assets/img/view.svg" height="24px">
-            <img src="assets/img/download.svg" height="20px" class="ml-2 mr-2"> |
-            <img src="assets/img/delete.svg" height="20px" class="ml-2">
-          </td>
-        </tr>
-        <tr>
-          <td>Impirmir.pdf</td>
-          <td>20/15/2021 (1 minute ago)</td>
-          <td><img src="assets/img/view.svg" height="24px">
-            <img src="assets/img/download.svg" height="20px" class="ml-2 mr-2"> |
-            <img src="assets/img/delete.svg" height="20px" class="ml-2">
-          </td>
-        </tr>
-        <tr>
-          <td>Imprimir.pdf</td>
-          <td>20/15/2021 (1 minute ago)</td>
-          <td><img src="assets/img/view.svg" height="24px">
-            <img src="assets/img/download.svg" height="20px" class="ml-2 mr-2"> |
-            <img src="assets/img/delete.svg" height="20px" class="ml-2">
+          <td colspan="3">
+            <div class="text-center">
+              <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+            </div>
           </td>
         </tr>
       </tbody>
